# packages

./: .gitignore  .gitmodules  CATEGORIES.md  CLAUDE.md  CONTRIBUTING.md  DISCIPLINES.md  LICENSE  README.md  cover.typ  git  guide.typ  heading.typ  outline.typ  page.typ  polytechnique.typ  report.typ  submit-to-official.sh  typst.schema.json  typst.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  packaging.yml
.github/workflows/: deploy.yml  lint.yml  review.yml  test.yml  test_pr.yml
.idx/: dev.nix
.omc/state/: hud-stdin-cache.json
1.0.0/: typst.toml
KUL-DeNayer-Thesis-template/: README.md  main.typ
KUL-DeNayer-Thesis-template/0.1.0/: main.typ  template.typ
assets/: README.md  armes.eps  filet-court.eps  filet-long.eps
bundler/: Cargo.toml
bundler/src/: author.rs  categories.rs  disciplines.rs  main.rs  model.rs  tests.rs  timestamp.rs
doc/: package-content.md  packaging-guidelines.md  submitting-a-package.md
docs/: CATEGORIES.md  DISCIPLINES.md  README.md  checklist.md  contents.md  documentation.md  licensing.md  manifest.md  manual.typ  resources.md  tips.md  typst.md
example/: example.typ
fonts/Zen_Kaku_Gothic_New/: OFL.txt
fonts/Zen_Old_Mincho/: OFL.txt
hhu-thesis/: lib.typ
hhu-thesis/setup/: template.typ
init-files/: thesis.typ
melt/0.1.0/: README.md
modern-se-kul-thesis/0.1.0/: README.md
preview/cogsci/0.1.0/: README.md  (+2 more)
template/: log.typ  paper.typ  progress_report.typ  report.typ  ussf-template.typ
touying-au/0.1.0/: typst.toml
unob-thesis/0.1.0/: README.md  typst.toml
(+138 files in other folders)
