[package]
name = "bundler"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
typst-syntax = { git = "https://github.com/typst/typst", rev = "3c22902" }
anyhow = "1"
ecow = "0.2.2"
email_address = { version = "0.2.4", default-features = false }
flate2 = "1"
ignore = "0.4"
image = { version = "0.24.9", default-features = false, features = ["png", "webp", "webp-encoder"] }
rayon = "1.0"
regex = "1.11.1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spdx = "0.10"
tar = "0.4"
toml = { version = "0.8", default-features = false, features = ["parse"] }
unicode-ident = "1.0.12"
unscanny = "0.1.0"
walkdir = "2"
